Link to repository (https://github.com/Timer/RRL).

--- a/plugins/README
+++ b/plugins/README
@@ -1,4 +1,4 @@
-Any plugin[s] that are distrubuted within this package may be under no license, or a different license than the RRL include.
+Any plugin[s] that are distrubuted within this package may be under no license, the same license, or a different license than the RRL include  (https://github.com/Timer/RRL).
 Please view their respective [name]_license.txt file before using.
 
 HOW-TO:
