--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 RRL - Reflection Resource Library
+https://github.com/Timer/RRL
 
 This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License.
 To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/3.0/
 or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
 
 Copyright (C) 2010 - 2011 by Joe Haddad, all rights reserved.
-This file is part of the RRL project.
+This file is part of the RRL project (https://github.com/Timer/RRL).
 
 For extended permissions please contact me by E-Mail, Timer150@Gmail.com.
