--- a/core/Randoms/README
+++ b/core/Randoms/README
@@ -1,13 +1,8 @@
-Any plugin[s] that are distrubuted within this package may be under no license, the same license, or a different license than the RRL include  (https://github.com/Timer/RRL).
-Please view their respective [name]_license.txt file before using.
-
-HOW-TO:
-Copy to main Plugins folder.
-...\Documents\SCAR Divi\Plugins
-or
-...\Simba (AppPath)\Plugins
+Contains all random solvers.
+All should be stable.
 
 =-=
+
 RRL - Reflection Resource Library
 https://github.com/Timer/RRL
 
